load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/gapid/cmd/shadertool",
    visibility = ["//visibility:private"],
    deps = [
        "//core/app:go_default_library",
        "//core/app/crash:go_default_library",
        "//gapis/shadertools:go_default_library",
    ],
)

go_binary(
    name = "shadertool",
    embed = [":go_default_library"],
    importpath = "github.com/google/gapid/cmd/shadertool",
    visibility = ["//visibility:public"],
)
