# Copyright (C) 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/gapid/cmd/smoketests",
    visibility = ["//visibility:private"],
    deps = [
        "//core/app:go_default_library",
        "//core/app/layout:go_default_library",
        "//core/log:go_default_library",
        "//core/os/file:go_default_library",
    ],
)

go_binary(
    name = "smoketests",
    data = ["//cmd/gapit"],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
