# Copyright (C) 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "search.go",
        "server.go",
        "upload.go",
    ],
    importpath = "github.com/google/gapid/cmd/stash",
    visibility = ["//visibility:private"],
    deps = [
        "//core/app:go_default_library",
        "//core/log:go_default_library",
        "//core/net/grpcutil:go_default_library",
        "//core/os/file:go_default_library",
        "//test/robot/search/script:go_default_library",
        "//test/robot/stash:go_default_library",
        "//test/robot/stash/grpc:go_default_library",
        "//test/robot/stash/local:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "stash",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
